--- a/public/views/trigger_skills/trigger_skills_manager.html
+++ b/public/views/trigger_skills/trigger_skills_manager.html
@@ -165,6 +165,7 @@
                         <tr>
                             <th>Имя</th>
                             <th>Категория</th>
+                            <th>Базовый навык</th>
                             <th>Стоимость</th>
                             <th>Сложный</th>
                             <th>Описание</th>
