--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -170,7 +170,7 @@
                         <form ng-hide="hideEditBlock" novalidate>
                             <div class="group">
                                 <i class="icmn-checkmark3 personage-name" style="cursor: pointer" ng-click="savePersonageName()"></i>
-                                <input class="name-material-form" type="text" required>
+                                <input class="name-material-form" ng-blur="savePersonageName()" ng-keypress="saveIfEnterPress($event)" type="text" required>
                                 <span class="highlight"></span>
                                 <span class="bar"></span>
                                 <label class="name-material-form">{{oldName}}</label>
@@ -179,15 +179,15 @@
 
                         <a ng-click="hideEditBlock = false" ng-show="hideEditBlock"
                            class="btn btn-icon icmn-pencil btn-link"
-                           href="javascript: void(0);" style="box-shadow: 0 0"></a>
+                           href="javascript: void(0);" style="box-shadow: 0 0; padding: 0"></a>
                         <ul class="dropdown-menu dropdown-animate" aria-labelledby="" role="menu">
                             <a class="dropdown-item" href="javascript: void(0)">Раса: {{personage.Race.name}}</a>
                             <a class="dropdown-item" href="javascript: void(0)">Возраст: {{personage.age}} лет</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="javascript: void(0)">Опыт: {{personage.experience}}</a>
                         </ul>
-                        <button ng-disabled="personage.experience < 0" type="button"
-                                class="btn btn-success btn-sm margin-inline margin-top-10"
+                        <button ng-show="hideEditBlock" ng-disabled="personage.experience < 0" type="button"
+                                class="btn btn-success btn-sm margin-inline margin-top-10" style="margin-left: 5em"
                                 ng-click="savePersonage()">Сохранить
                         </button>
                     </div>
