--- a/public/views/personage_logic/edit_personage.html
+++ b/public/views/personage_logic/edit_personage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/vendors/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/common/css/main.min.css">
     <link rel="stylesheet" type="text/css" href="/node_modules/sweetalert2/dist/sweetalert2.min.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap-select/dist/css/bootstrap-select.min.css">
 
     <!-- Vendors Scripts -->
     <!-- v1.0.0 -->
@@ -18,6 +19,7 @@
     <script src="/node_modules/autosize/dist/autosize.min.js"></script>
     <script src="/node_modules/jscrollpane/script/jquery.jscrollpane.min.js"></script>
     <script src="/assets/vendors/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
+    <script src="/node_modules/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 
     <script src="/node_modules/sweetalert2/dist/sweetalert2.min.js"></script>
     <!-- Clean UI Scripts -->
@@ -267,12 +269,12 @@
                             </tbody>
                         </table>
 
-                        <form name="addPersonageInherentForm">
+                        <form name="addPersonageInherentForm" style="width: 98%">
                             <div class="form-group row">
-                                <label class="control-label col-sm-2" for="inherent_id">Особенность: </label>
+                                <label class="control-label col-sm-2" for="inherent_id" style="padding-left: 8% !important;padding-top: 0.5%;">Особенность: </label>
 
                                 <div class="col-sm-5">
-                                    <select class="form-control"
+                                    <select class="form-control selectpicker"
                                             ng-model="inherent_id" id="inherent_id"
                                             ng-options="inherent.id as inherent.name for inherent in inherents">
                                         <option style="display:none" value="">Выберите особенность...</option>
